--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
 
   <budy>
- <h1> ESTUDIAR pero ahora!!!  </h1>
+ <h1> Material conteo    </h1>
  <p> queda poco tiempo  </p>
   
  <button onclick='saludar()'>haz clic aqui</button>
@@ -19,3 +19,4 @@ function saludar() {
  </script>
  </budy>
  </html>
+
