--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-<title> Programacion </title>
+<title> Materia </title>
  </head>
 
   <budy>
@@ -19,4 +19,5 @@ function saludar() {
  </script>
  </budy>
  </html>
+
 
